--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsup",
     "dev": "nodemon --watch src --exec ts-node src/index.ts",
-    "start": "node dist/index.js"
+    "start": "tsup && node dist/index.js"
   },
   "dependencies": {
     "@fastify/cookie": "^11.0.2",
